[project]
name = "godown"
version = "0.1.0"
description = "Multi-tenant procurement and supply chain OS"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "config", "examples", "services", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F405", "F403"]
"apps/common/models.py" = ["DJ012"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
strict = false
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"
packages = ["apps", "config", "examples", "services"]
# Exclude test suite and root conftest — not part of the shipped packages.
exclude = ["^tests/", "^conftest\\.py"]

# Strict mode on security-critical modules — expand as codebase matures
[[tool.mypy.overrides]]
module = [
    "apps.tenants.*",
    "apps.rbac.*",
    "services.rbac.*",
    "services.tenant_context",
]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true

# Suppress errors in non-strict app/service modules with pre-existing issues.
# These will be tightened incrementally as annotations are added.
[[tool.mypy.overrides]]
module = [
    "apps.common.*",
    "apps.notifications.*",
    "apps.audit.*",
    "apps.users.*",
    "apps.authentication.*",
    "services.notifications.*",
    "services.common.*",
    "services.audit.*",
    "services.users.*",
    "services.auth.*",
    "examples.*",
    "config.env",
    "config.asgi",
]
ignore_errors = true

# Never type-check auto-generated migration files.
[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.mypy"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["apps", "config", "services"]
omit = ["*/migrations/*", "*/tests/*", "manage.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
